# ArxLibertatis

./: .editorconfig  .gitignore  .mailmap  .travis.yml  ARX_PUBLIC_LICENSE.txt  ARX_SOURCES_README.txt  AUTHORS  BUILD.txt  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  COPYING  FindOpenALEFX.cmake  LICENSE  LICENSE.stb  LICENSE.txt  OPTIONS.md  README.md  README.org  README.txt  VERSION  macosx-config.sh
.github/workflows/: ci.yml  codeql.yml
Sources/: Gaia.dsp  Gaia.dsw  Gaia.sln  Makefile  premake4.lua
Sources/ArxCommon/: ARX_Common.cpp  ArxCommon.vcproj  ArxCommon.vcxproj  ArxCommon.vcxproj.filters  Timer.h
Sources/Athena/: Athena.cpp  Athena.dsp  Athena.vcproj  Athena.vcxproj  Athena.vcxproj.filters  Athena_Ambiance.cpp  Athena_Ambiance.h  Athena_CoDec_ADPCM.cpp  Athena_Codec.h  Athena_Codec_ADPCM.h  Athena_Codec_RAW.cpp  Athena_Codec_RAW.h  Athena_DLL.cpp  Athena_Environment.cpp  Athena_Environment.h  Athena_FileIO.cpp  Athena_FileIO.h  Athena_Global.cpp  Athena_Global.h  Athena_Instance.cpp  Athena_Instance.h  Athena_Mixer.cpp  Athena_Mixer.h  Athena_Resource.cpp  Athena_Resource.h  Athena_Sample.cpp  Athena_Sample.h  Athena_Stream.cpp  Athena_Stream.h  Athena_Stream_ASF.cpp  Athena_Stream_ASF.h  Athena_Stream_WAV.cpp  Athena_Stream_WAV.h  Athena_Track.cpp  Athena_Track.h
Sources/DANAE/: ARX_CParticle.cpp  ARX_CParticle.h  ARX_CParticleSystem.cpp  ARX_CParticles.cpp  ARX_CSpellFx.cpp  ARX_C_cinematique.cpp  ARX_C_fx.cpp  ARX_C_keyframer.cpp  ARX_C_loadsave.cpp  ARX_Draw.cpp  (+87 more)
cmake/: BuildSystem.cmake  BuildType.cmake  CXX11Check.cmake  CXXVersionCheck.cmake  CompileCheck.cmake  ConfigureFileScript.cmake  CreateSourceGroups.cmake  FindCppUnit.cmake  FindDbgHelp.cmake  FindDirectX.cmake  FindEpoxy.cmake  FindGLEW.cmake  FindGLM.cmake  FindInkscape.cmake  FindOGRE.cmake  FindOpenALEFX.cmake  FindOptiPNG.cmake  FindQt.cmake  FindSDL2.cmake  FindWine.cmake  Findiconutil.cmake  Icon.cmake  Icon.rc.in  Icons.cmake  InstallDirs.cmake  Manifest.rc.in  PrintConfiguration.cmake  RuntimeDirs.cmake  StyleCheck.cmake  UnityBuild.cmake  UseStaticLibs.cmake  VersionScript.cmake  VersionString.cmake  check-alignof.cpp  check-builtin_unreachable.cpp  check-cxx11-auto.cpp  check-cxx11-static_assert.cpp  check-cxx11-std-forward.cpp  check-cxx11-std-integral_constant.cpp  check_compiler_attribute_format_printf.cpp  (+5 more)
data/: CMakeLists.txt
doc/: Doxyfile
include/: ARX_CCinematique.h  ARX_CParticleParams.h  ARX_CParticleSystem.h  ARX_CParticles.h  ARX_CSpellFx.h  ARX_Carte.h  ARX_Casts.h  ARX_ChangeLevel.h  ARX_Collisions.h  ARX_Common.h  ARX_Damages.h  ARX_Equipment.h  ARX_FTL.h  ARX_Fogs.h  ARX_Input.h  ARX_Interactive.h  ARX_Interface.h  ARX_Levels.h  ARX_Menu.h  ARX_Minimap.h  ARX_Missile.h  ARX_NPC.h  ARX_Particles.h  ARX_Paths.h  ARX_Physics.h  ARX_Player.h  ARX_Scene.h  ARX_Script.h  ARX_Sound.h  ARX_Special.h  ARX_Speech.h  ARX_Spells.h  ARX_Text.h  ARX_Time.h  Athena.h  Athena_Types.h  DANAE_VERSION.h  Danae.h  DanaeDlg.h  DanaeSaveLoad.h  (+36 more)
scripts/: Doxyfile  arx-install-data  cpplint.py  data-de.md5  data-demo.md5  data-en.md5  data-it.md5  find-script-command  install-cd  install-common  install-copy  install-demo  install-gog  install-verify  pre-commit  update-copyright-years
src/: Configure.h.cmake  Configure.h.in
tests/: CMakeLists.txt  TestMain.cpp  testMain.cpp
tests/graphics/: ColorTest.cpp  ColorTest.h  GraphicsUtilityTest.cpp  GraphicsUtilityTest.h
tests/io/: IniTest.cpp  IniTest.h
tests/io/fs/: FilePathTest.cpp  FilePathTest.h  FilesystemTest.cpp  FilesystemTest.h
tests/io/resource/: ResourcePathTest.cpp  ResourcePathTest.h
tests/math/: AssertionTraits.h  LegacyMath.h  LegacyMathTest.cpp  LegacyMathTest.h  vectors.cpp
tests/util/: StringTest.cpp  StringTest.h
tools/: CMakeLists.txt  ToolMain.cpp
tools/arxedit/: ArxEdit.cpp  ArxLevel.cpp  ArxLevel.h  ArxMainWindow.cpp  ArxMainWindow.h  CameraManipulator.h  RenderWidget.cpp  RenderWidget.h  ViewportGrid.cpp  ViewportGrid.h
tools/arxedit/model/: AnimationLayersModel.cpp  AnimationLayersModel.h  AssetsModel.cpp  AssetsModel.h  LightsModel.cpp  LightsModel.h  ResourcesTreeModel.cpp  ResourcesTreeModel.h
tools/arxedit/resources/: ArxEdit.qrc
tools/arxedit/ui/: ArxEditWindow.cpp  ArxEditWindow.h  ArxEditWindow.ui  ArxMainWindow.ui  ArxRenderWidget.cpp  ArxRenderWidget.h  ArxViewer.cpp  ArxViewer.h  ArxViewer.ui
tools/crashreporter/: CrashReporter.cpp  ErrorReport.cpp  ErrorReport.h  Win32Utilities.cpp  Win32Utilities.h  errorreport.cpp  errorreport.h  main.cpp  utilities_win32.cpp  utilities_win32.h
tools/crashreporter/csmtp/: README  base64.cpp  base64.h  csmtp.cpp  csmtp.h  md5.cpp  md5.h
tools/crashreporter/minizip/: crypt.h  ioapi.cpp  ioapi.h  zip.cpp  zip.h
tools/crashreporter/qhexedit/: Commands.cpp  Commands.h  QHexEdit.cpp  QHexEdit.h  QHexEditPrivate.cpp  QHexEditPrivate.h  XByteArray.cpp  XByteArray.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h  qhexedit_p.cpp  qhexedit_p.h  xbytearray.cpp  xbytearray.h
tools/crashreporter/resources/: CrashReporter.qrc  CrashReporter.qrc.in  crashreporter.qrc  license.txt  startcom.cer
tools/crashreporter/tbg/: HTTPClient.h  HTTPClientCURL.cpp  HTTPClientWindows.cpp  TBG.cpp  TBG.h  tbg.cpp  tbg.h
tools/crashreporter/ui/: ErrorReportDialog.cpp  ErrorReportDialog.h  ErrorReportDialog.ui  errorreportdialog.cpp  errorreportdialog.h  errorreportdialog.ui
tools/crashreporter/xmlhighlighter/: xmlhighlighter.cpp  xmlhighlighter.h
tools/profiler/: ProfilerMain.cpp
tools/profiler/resources/: ArxProfiler.qrc
tools/profiler/ui/: ArxProfiler.cpp  ArxProfiler.h  ArxProfiler.ui
tools/savetool/: Filesystem_C.cpp  SaveFix.cpp  SaveFix.h  SaveRename.cpp  SaveRename.h  SaveTool.cpp  SaveTool.h  SaveView.cpp  SaveView.h  savetool.cpp
tools/unpak/: UnPak.cpp  UnPak.h  unpak.cpp
tools/viewer/: ViewerMain.cpp
tools/viewer/model/: AnimationLayersModel.cpp  AnimationLayersModel.h  AssetsModel.cpp  AssetsModel.h  LightsModel.cpp  LightsModel.h
tools/viewer/ui/: ArxRenderWidget.cpp  ArxRenderWidget.h  ArxViewer.cpp  ArxViewer.h  ArxViewer.ui
(+1663 files in other folders)
